# super-stt-whisper

./: .gitignore  Cargo.toml  README.md  backend.toml  justfile  tombi.toml
.github/workflows/: ci.yml  release.yml
src/: inference.rs  lib.rs  main.rs
tests/: protocol.rs  smoke.rs  transcribe_e2e.rs
tests/common/: mod.rs
